feat: Implement PydanticAI v2 architecture with strict conformance
ARCHITECTURE:
- Provider registry with JSON schema validation
- Automatic task-based routing (nano/mini/reasoning)
- Strict separation: reasoning_effort vs temperature
- Wiki agent with fixed system prompt
- Session-based provider switching

PROVIDERS:
- openai-gpt5-reasoning (reasoning_effort: medium)
- openai-gpt5-text (temperature: 0.25)
- openai-gpt5-mini-text (bulk operations)
- openai-gpt5-nano-text (tags, metadata)
- anthropic-claude-3-5-sonnet
- anthropic-claude-3-haiku

ROUTING:
- tags/abstract/metadata → nano (fast, cheap)
- bulk/rewrite/summary → mini (efficient)
- structure/outline/analysis → reasoning (deep)
- default → text (standard)

VALIDATION:
- JSON schema enforcement
- Runtime settings validation
- CI/CD conformance pipeline
- Build fails on violations

TESTING:
- Comprehensive conformance tests
- Schema validation
- All tests passing

DOCUMENTATION:
- Full architecture guide
- Quick start guide
- Usage examples
- Makefile automation

NO MAGIC DEFAULTS - JSON IS SINGLE SOURCE OF TRUTH

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,15 @@ pycld2
 colorama
 pyyaml
 python-Levenshtein
+pydantic-ai
 pytest
 black
+openai
+jsonschema
+anthropic
+pydantic
+fastapi
+uvicorn
+httpx
+markdown
+python-multipart
