chore: Update .gitignore for clean repository
Added patterns for:
- Python artifacts (__pycache__, *.pyc, etc.)
- Virtual environments (.venv, venv, env)
- Session files (.linkowiki-session.json)
- IDE files (.vscode, .idea, *.swp)
- OS files (.DS_Store, Thumbs.db)
- Log files (*.log)

Ensures clean clones without build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,30 @@
-*.pyc
-*.swp
-log/
-ve/
-share/vim/.vim/
-share/vim/.viminfo
-typescript
-venv/
-bin/upstream
-upstream/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
 .venv/
+venv/
+ENV/
+env/
+
+# Session files
+.linkowiki-session.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
