--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,31 @@
+# Core AI Framework
+pydantic-ai>=0.0.14
+pydantic>=2.0.0
+
+# AI Provider APIs
+openai>=1.0.0
+anthropic>=0.8.0
+
+# JSON Schema Validation
+jsonschema>=4.0.0
+
+# Testing
+pytest>=7.0.0
+black>=23.0.0
+
+# HTTP/API (for FastAPI endpoints if needed)
+fastapi>=0.100.0
+uvicorn>=0.23.0
+httpx>=0.24.0
+
+# Markdown Processing
+markdown>=3.4.0
+
+# YAML Configuration
+pyyaml>=6.0.0
+
+# Original cheat.sh dependencies (if still needed)
+# Comment out if not using original cheat.sh functionality
 wheel
 gevent
 flask
@@ -13,17 +41,5 @@ polyglot
 PyICU
 pycld2
 colorama
-pyyaml
 python-Levenshtein
-pydantic-ai
-pytest
-black
-openai
-jsonschema
-anthropic
-pydantic
-fastapi
-uvicorn
-httpx
-markdown
 python-multipart
