Features implement and fixings

--- a/etc/linkowiki.conf
+++ b/etc/linkowiki.conf
@@ -20,7 +20,7 @@ max_history = 100
 auto_save = true
 
 # Default session mode (read or write)
-default_mode = read
+default_mode = write
 
 [wiki]
 # Root directory for wiki content
